--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format:write": "prettier . --write",
     "sso": "aws sso login --sso-session=nagisa-yamato"
   },
   "dependencies": {
@@ -20,10 +21,19 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.1",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "sst": "^2.23.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
